--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <!-- Poster di samping informasi lomba -->
             <aside class="poster-pendaftaran">
                 <h3>Poster Pendaftaran</h3>
-                <img src="D:\Kuliah\Semester 5\Praktikum Konsep\olahraga.jpg" alt="Poster Pendaftaran Lomba Olahraga" style="width: 100%; height: auto;">
+                <img src="D:\Kuliah\Semester 5\Praktikum Konsep/olahraga.jpg" alt="Poster Pendaftaran Lomba Olahraga" style="width: 100%; height: auto;">
                 <p>Bergabunglah dalam acara lomba olahraga terbesar tahun ini! Jangan lewatkan kesempatan untuk menjadi juara dan menangkan berbagai hadiah menarik.</p>
                 <a href="D:\Kuliah\Semester 5\Praktikum Konsep\indexform.html" class="btn-register">Daftar Sekarang</a>
             </aside>
